# ESPIC

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/source/: conf.py  espic.rst  index.md  modules.rst
examples/: 1D Cold Plasma Example.ipynb
src/espic/: __init__.py  def_particle.py  def_particles.py  deposit_charge.py  driver.py  init_charges.py  interp_field.py  make_grid.py  make_weight_func.py  push_particles.py  run_espic.py  solve_maxwell.py
tests/: charge_deposition_test.py  def_particle_test.py  def_particles_test.py  init_charges_test.py  interp_field_test.py  maxwell_solver_test.py  push_particles_test.py  test_charge_deposition.py  test_interp_field.py  test_maxwell_solver.py
