[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espic"
version = "0.1"
authors = [
  { name="Patrick Kim" },
  { name="Brandon Lee" },
]
description = "Electrostatic particle-in-cell code"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/leebr48/ESPIC"

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]

[tool.ruff]
select = [
  "ALL",
]
ignore = [
  "D203",
  "D212",
]
src = ["src"]
