[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "espic"
version = "0.1"
authors = [
  { name="Patrick Kim" },
  { name="Brandon Lee" },
]
description = "Electrostatic particle-in-cell code"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]
classifiers = [
  "Private :: Do Not Upload",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/leebr48/ESPIC"

[project.optional-dependencies]
test = [
  "pytest",
]
docs = [
  "furo",
  "myst-parser",
  "sphinx",
  "sphinx_copybutton",
  "sphinx-autodoc-typehints",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]

[tool.ruff]
select = [
  "ALL",
]
ignore = [
  "D203",
  "D212",
]
src = ["src"]

[tool.mypy]
mypy_path = './src'
packages = 'espic'
strict = true
ignore_missing_imports = true
